The tooltip in "File > New > General" is misleading #109875

Closed
opened 2023-07-09 17:16:51 +02:00 by crabs · 4 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.25

Blender Version
Broken: version: 4.0.0 Alpha, branch: main (modified), commit date: 2023-07-08 02:41, hash: c677f791f063
Worked: (newest version of Blender that worked as expected)

Short description of error
File > New> General tooltip says "Open the default file (doesn't save the current file)". IMO this is misleading. By reading this, I expect that the default file will be restored without the option to save the current one, but this is not the actual behavior. If the current scene has been modified, the "Save changes before closing?" with the option to save the current file is show.

Exact steps for others to reproduce the error
Make changes to any blend file, then chose "File > New > General". You are prompted with the option to save your changes.

Suggested fix
The tooltip should say "Open the default file", without the part in parenthesis "(doesn't save the current file)".

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.25 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main (modified), commit date: 2023-07-08 02:41, hash: `c677f791f063` Worked: (newest version of Blender that worked as expected) **Short description of error** File > New> General tooltip says "Open the default file (doesn't save the current file)". IMO this is misleading. By reading this, I expect that the default file will be restored without the option to save the current one, but this is not the actual behavior. If the current scene has been modified, the "Save changes before closing?" with the option to save the current file is show. **Exact steps for others to reproduce the error** Make changes to any blend file, then chose "File > New > General". You are prompted with the option to save your changes. **Suggested fix** The tooltip should say "Open the default file", without the part in parenthesis "(doesn't save the current file)".
crabs added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-07-09 17:16:51 +02:00
Member

Thanks for the report. I can confirm.

Thanks for the report. I can confirm.
Pratik Borhade added
Module
User Interface
Status
Confirmed
Meta
Good First Issue
and removed
Status
Needs Triage
labels 2023-07-10 05:43:25 +02:00

Hey! I'm new to contributing to blender, and I feel like this would be a good first issue for myself.

I imagine it would mainly involve clearing that last line from the id and string in those .po files. Then, making sure that the id's are corrected where it needs to in the code (So far there's only 1 instance).


I'm not sure if it'd be good practice, but I could create a similar id which is identical, minus the bracket comment. We could keep both in case there is something down the line that doesn't save.

So msgid "Open the default file" alongside msgid "Open the default file (doesn't save the current file)"

Hey! I'm new to contributing to blender, and I feel like this would be a good first issue for myself. I imagine it would mainly involve clearing that last line from the id and string in those .po files. Then, making sure that the id's are corrected where it needs to in the code (So far there's only 1 instance). --- I'm not sure if it'd be good practice, but I could create a similar id which is identical, minus the bracket comment. We could keep both in case there is something down the line that doesn't save. So `msgid "Open the default file"` alongside `msgid "Open the default file (doesn't save the current file)"`
Member

hi, you've to only edit the description of WM_OT_read_homefile operator: https://projects.blender.org/blender/blender/src/branch/main/source/blender/windowmanager/intern/wm_files.cc#L2621

msgid line you're referring to is part of language translation file.

hi, you've to only edit the description of `WM_OT_read_homefile` operator: https://projects.blender.org/blender/blender/src/branch/main/source/blender/windowmanager/intern/wm_files.cc#L2621 `msgid` line you're referring to is part of language translation file.

oh I see. I wasn't sure, but I was thinking that the description was referencing the msgid so that somewhere down the pipeline it'll be translated into the right language. I guess if it's not going through that flow I could just change the string that the description is setting. I do wonder why there's a matching msgid but we're not using the translations.

oh I see. I wasn't sure, but I was thinking that the description was referencing the `msgid` so that somewhere down the pipeline it'll be translated into the right language. I guess if it's not going through that flow I could just change the string that the description is setting. I do wonder why there's a matching `msgid` but we're not using the translations.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-17 11:52:42 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109875
No description provided.